[package]
name = "human_duration"
version = "0.1.1"
authors = ["Ben Santora"]
edition = "2018"
description = "A Rust library for formatting and parsing human-readable durations."
license = "MIT"
repository = "https://github.com/bensatlantik/human_duration"
homepage = "https://github.com/bensatlantik/human_duration"
documentation = "https://docs.rs/human_duration"
readme = "README.md"
keywords = ["duration", "time", "human-readable", "formatting", "parsing"]
categories = ["time"]

[dependencies]
# Add any dependencies here if needed
